# books-orders-api

./: .coverage  .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
app/: main.py
app/api/routes/: authors.py  books.py  orders.py  tenants.py
app/core/: config.py  errors.py  logging.py  middleware_correlation.py  middleware_tenant.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 9834336f304a_init_schema.py
app/models/: author.py  book.py  order.py
app/repos/: __init__.py  author_repo.py  book_repo.py  order_repo.py
app/schemas/: author.py  book.py  order.py
app/services/: author_service.py  book_service.py  order_service.py
app/utils/: pagination.py
tests/: conftest.py  test_authors.py  test_books.py  test_integration.py  test_middleware.py  test_orders.py  test_repos.py  test_services.py  test_tenants.py  test_validation.py
tests/test_errors/: __init__.py  test_error_handlers.py
tests/test_session/: __init__.py  test_db_session.py
